# computing-serverless

./: Dockerfile  README.md  cmip6_variant_finder.py  demo_run_lithops.py  pyproject.toml  set_environment.sh  urls.csv
