[project]
name = "serverless-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "awswrangler>=3.11.0",
    "cftime>=1.6.4.post1",
    "dask>=2024.8.0",
    "lithops>=3.6.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "s3fs>=2025.3.2",
    "xarray>=2024.7.0",
    "zarr>=2.18.2",
]
